**************
RECENT CHANGES
**************

======
1.94.0
======

* #416 Converts times to local or specified timezone (by Steve Robbin)
* #441 config:dump produces invalid xml (Andrew Stayart)
* #453 Add store parameter to template hints commands (by Hadrien Collongues)
* #462 dbHost not respected #462 (by Achim Rosenhagen)
* #463 Fixed missing sprintf when creating Exception in sys:cron:run command (by Tim Eydamos)
* #464 SampleData in Version 1.9 are not downloading (by Rafael Corrêa Gomes)
* Disable command by config.
* Removed Magento 2 bootstrapping -> Moved into n98-magerun2

======
1.93.0
======

* #399 Admin user unlock [EE only] (by Steve Robbins)
* #415 Clean multiple caches at once (by Michael Barrett)
* #418 Use already instantiated cache object. (by Alan Storm)
* #421 enable or disable a module based on name or codepool (by Steve Robbins)
* #423 db:import --drop does not take into account the "only-command" option (by Michael Lühr)
* #429 Install command ignores skin folder of 1.9.0.0 sample data (by Vinai Kopp)
* #435 New db:status and db:variable commands (by Cyrill Schumacher)
* #436 Alternative Installation Port is not respected (by Christian Münch)
* #440 Added Magento CE 1.9.1.0 to installer (by Rouven Rieker)
* Minor documentation corrections (by  Jaik Dean)
* Refactored db:maintain:check-tables to allow InnoDB and Memory tables to be optimized. (by Cyrill Schumacher)
* Bash completion - change regexp condition to string contains. (by Paweł Bogut)
* Updated Symfony components to V2.6
* Updated locked phpunit version.

======
1.94.0
======

* Disable command by configuration (by Christian Münch)

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net